# fastapi_edu

./: my_db.db  pyproject.toml
lecture/: curl_req.py  curls_13  main01.py  main03.py  main_02.py  main_05.py  main_06.py  main_07.py  main_08.py  main_09.py  main_path.py  main_query.py
step1/: main02.py
step2/app/: main.py
step2/app/database/: crud_orders.py  crud_product.py  crud_user.py  database.py  models.py  schemas.py
step2/app/routers/: order.py  product.py  user.py
