[tool.poetry]
name = "fastapi-ed"
version = "0.1.0"
description = ""
authors = ["arletino <titkov@nxt.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
jinja2 = "^3.1.4"
sqlalchemy = "^2.0.32"
databases = "^0.9.0"
aiosqlite = "^0.20.0"
pydantic = {version = "^2.8.2", extras = ["email"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
